Bug 354630 - Inconsitency in Kate's color schemes resulting in very difficult to read buttons and tabs for some KDE color schemes.
Summary: Inconsitency in Kate's color schemes resulting in very difficult to read butt...
Status: RESOLVED FIXED
Alias: None
Product: kate
Classification: Applications
Component: application (other bugs)
Version First Reported In: 5.0.0
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: KWrite Developers
URL: http://www.mediafire.com/view/gi06mdy...
Keywords:
Depends on:
Blocks:
 
Reported: 2015-10-31 03:45 UTC by thebunnyrules
Modified: 2016-06-01 17:14 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description thebunnyrules 2015-10-31 03:45:59 UTC
On kate 15.08

I have dark color scheme where windows and view areas are dark with light colored text and buttons are bright with dark colored text. 

See the following images for a screen shot of the whole scheme:
http://www.mediafire.com/view/yia44y25vzw35kt/scheme1.png
http://www.mediafire.com/view/gz6tbw29gaakzir/scheme2.png

I have gold buttons with purple fonts:
http://www.mediafire.com/view/pwewds259vzrnft/scheme3.png
(as you can see, my scheme has dark window, bright buttons with dark text on them).

You've chosen to stylize kate by having the tabs take on the window colors rather then the button colors as is conventional. That's fair enough but in that circustance you shouldn't use the font color of the button text for the tab text because it may result in hard to read tabs:

http://www.mediafire.com/view/gi06mdyc9swlg4n/scheme4.png
(dark tab - same color as window, same text color as my button which also dark because my buttons are bright).

If you use window background for the tabs, you should use window font text colors with it to be consistent.


Reproducible: Always

Steps to Reproduce:
1. Go to System Setting > Color Scheme  and select Breeze Dark
2. Modify breeze dark so that the buttons are bright and button font is dark (not grey, dark). 
3. Start or restart kate. You'll see that the tabs are hard to see.
Comment 1 Dominik Haumann 2016-04-06 19:35:13 UTC
Git commit cb500bfc14fcfb6c661b194f8db6f544f98435ab by Dominik Haumann.
Committed on 06/04/2016 at 19:35.
Pushed by dhaumann into branch 'master'.

Tabbar: use QPalette::WindowText role instead of ButtonText role as foreground color

M  +1    -1    kate/katetabbutton.cpp

http://commits.kde.org/kate/cb500bfc14fcfb6c661b194f8db6f544f98435ab
Comment 2 Dominik Haumann 2016-04-06 19:36:00 UTC
Git commit 4ff786ca8eeeb65ad95669c8adde74fe02f1dfff by Dominik Haumann.
Committed on 06/04/2016 at 19:35.
Pushed by dhaumann into branch 'Applications/16.04'.

Tabbar: use QPalette::WindowText role instead of ButtonText role as foreground color

M  +1    -1    kate/katetabbutton.cpp

http://commits.kde.org/kate/4ff786ca8eeeb65ad95669c8adde74fe02f1dfff
Comment 3 Dominik Haumann 2016-04-06 19:36:51 UTC
Thanks for the report, this is now properly fixed in the upcoming Applications 16.04 release.
Comment 4 Dominik Haumann 2016-06-01 17:14:20 UTC
Git commit 5c522177a9cdb7356cc4498ba0bfc02ffda4f61e by Dominik Haumann.
Committed on 01/06/2016 at 17:09.
Pushed by dhaumann into branch 'Applications/15.12'.

Tabbar: use QPalette::WindowText role instead of ButtonText role as foreground color

M  +1    -1    kate/katetabbutton.cpp

http://commits.kde.org/kate/5c522177a9cdb7356cc4498ba0bfc02ffda4f61e