Tabbar: use QPalette::WindowText role instead of ButtonText role as foreground color

BUG: 354630